# cpm.riscv-isa-sim

./: .gitmodules  CONTRIBUTORS.md  Makefile.in  README.md  STF_TRACING.md  clean_repo.sh  config.h.in  configure  configure.ac  stf_config.h.in
fesvr/: htif.cc  stf_options.h
riscv/: bb_tracer.cc  bb_tracer.h  cachesim.cc  cfg.h  csr_init.cc  csrs.cc  csrs.h  encoding.h  execute.cc  mmu.cc  mmu.h  processor.cc  processor.h  riscv.mk.in  sim.cc  sim.h  spike_stf.cc  spike_stf.h  spike_stf_helpers.h  stf_handler.h  triggers.cc  vector_unit.cc
spike_main/: spike.cc
tests/: Makefile  compile.sh  grab_elfs.sh  trace.sh
tests/elfs/: bmi_median.rv64gc_nozbx.bare.riscv  bmi_pmp.bare.riscv  bmi_pmp.rv64gc_nozbx.bare.riscv  bmi_pmp.rv64gc_with_zbx.bare.riscv  bmi_sanity.bare.riscv  bmi_sanity.rv64gc_nozbx.bare.riscv  bmi_sanity.rv64gc_with_zbx.bare.riscv  coremark_10.bare.riscv  coremark_10.rv64gc_nozbx.bare.riscv  dhrystone_opt1.10.bare.riscv  dhrystone_opt1.10.rv64gc_nozbx.bare.riscv  dhrystone_opt2.10.bare.riscv  dhrystone_opt2.10.rv64gc_nozbx.bare.riscv  dhrystone_opt3.10.bare.riscv  dhrystone_opt3.10.rv64gc_with_zbx.bare.riscv  simple.rv64gc.bare.riscv  simple.rv64gc_with_zbx.bare.riscv  simple.rv64gc_zba_zbb_zbc_zbs.bare.riscv  simple.rv64gcv_zba_zbb_zbc_zbs.bare.riscv  zbx.rv64gc_with_zbx.bare.riscv  zbx.rv64gc_zba_zbb_zbc_zbs.bare.riscv  zbx.rv64gcv_zba_zbb_zbc_zbs.bare.riscv
tests/refs/: bmi_dhrystone.rv64gc_nozbx.bare.riscv  bmi_dhrystone.rv64gc_with_zbx.bare.riscv  bmi_median.rv64gc_with_zbx.bare.riscv  bmi_vvadd.bare.riscv  coremark_10.rv64gc_with_zbx.bare.riscv  dhrystone_opt2.10.rv64gc_with_zbx.bare.riscv  dhrystone_opt3.10.rv64gc_nozbx.bare.riscv  minimal.bare.riscv
tests/scripts/: isa_test_list.txt  run_riscv_isa_tests.sh  run_stf_gen_test.sh
tests/src/: crt.S  simple.c  syscalls.c  vector.S  zbx.c
